# private_deps_data_issue

./: .bazelrc  AppDelegate.swift  BUILD  Info.plist  MODULE.bazel  README.md
srcs/A/: A.swift  BUILD
srcs/B/: B.h  B.m  BUILD
