module(
    name = "private_deps_data_issue_demo",
    version = "0.0.1",
)
bazel_dep(name = "rules_swift", version = "1.9.1", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "apple_support", version = "1.6.0", repo_name = "build_bazel_apple_support")
bazel_dep(name = "rules_apple", version = "2.3.0", repo_name = "build_bazel_rules_apple")
